front-end/templates/front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    name: front
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: front
