front-end/templates/front-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "front-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: front
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: front
              servicePort: 3000
